--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.19",
+    "vite-plugin-babel": "^1.1.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "@babel/core": "7.21.4",
     "@babel/preset-env": "7.21.4",
     "@vitejs/plugin-vue": "^4.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "vite": "^4.2.0"
   }
 }
